# deplapp

./: .env  README.md  app.py  pyproject.toml  vercel.json
api/: index.py
depl_webapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
instance/: tools_tracker.db
templates/: add.html  add_tool.html  add_tool_for_location.html  base.html  dashboard.html  edit.html  index.html  login.html  select_location.html  view.html
